crates/clearhead-cli/tests/snapshots/snapshots_from_examples__with_story_path.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Set up CLI project structure",
    description: Some("Initialize the Rust project with proper layout"),
    priority: Some(2),
    contexts: Some([
      "DevOps",
      "Coding",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/cli"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Implement tree-sitter bindings",
    description: Some("Wrap the parser for Rust use"),
    priority: Some(2),
    contexts: Some([
      "Coding",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/parser"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Write parser tests",
    description: Some("Comprehensive test coverage"),
    priority: Some(3),
    contexts: Some([
      "Testing",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/parser"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Design neovim plugin architecture",
    description: Some("Plan the Lua module structure"),
    priority: Some(2),
    contexts: Some([
      "Design",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/neovim"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Set up LSP server",
    description: Some("Configure language server protocol"),
    priority: Some(1),
    contexts: Some([
      "DevOps",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/cli"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Update personal website",
    description: Some("New portfolio section"),
    priority: Some(3),
    contexts: Some([
      "Coding",
      "Creative",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("personal/website"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Plan vacation",
    description: Some("Research destinations"),
    priority: Some(4),
    contexts: Some([
      "Planning",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("personal/travel"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Fix shopping cart bug",
    description: Some("Critical production issue"),
    priority: Some(1),
    contexts: Some([
      "Bugfix",
      "Critical",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/other-project"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Refactor authentication",
    description: Some("Improve security patterns"),
    priority: Some(2),
    contexts: Some([
      "Coding",
      "Security",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/other-project"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Read programming book",
    description: Some("Finish chapter 5"),
    priority: Some(4),
    contexts: Some([
      "Reading",
    ]),
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("personal/learning"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
